--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,186 @@
 
+<!DOCTYPE html>
+<html lang="sv">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Integritetspolicy - En tryggare väg</title>
+    <link rel="stylesheet" href="style.css">
+    <!-- Google Fonts: Poppins for headings, Lato for body text -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:wght@400;600;700;700&display=swap" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <style>
+        /* Specifik stil för integritetspolicysidan för att matcha webbplatsens utseende */
+        body {
+            background-color: var(--main-bg-color);
+            color: var(--body-text-color);
+            font-family: 'Lato', sans-serif;
+            line-height: 1.6;
+        }
+        .policy-container {
+            max-width: 900px;
+            margin: 80px auto;
+            padding: 60px;
+            background-color: var(--card-bg-color);
+            border-radius: 15px;
+            box-shadow: var(--shadow-subtle);
+            border: 1px solid var(--color-border);
+        }
+        .policy-container h1 {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 700;
+            font-size: 3rem;
+            color: var(--heading-color);
+            text-align: center;
+            margin-bottom: 40px;
+        }
+        .policy-container h2 {
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 1.8rem;
+            color: var(--heading-color);
+            margin-top: 30px;
+            margin-bottom: 15px;
+        }
+        .policy-container p, .policy-container ul {
+            font-size: 1.1rem;
+            margin-bottom: 15px;
+        }
+        .policy-container ul {
+            list-style-type: disc;
+            padding-left: 25px;
+        }
+        .policy-container ul li {
+            margin-bottom: 8px;
+        }
+        .policy-container a {
+            color: var(--color-primary-light);
+            text-decoration: underline;
+        }
+        .policy-container a:hover {
+            color: var(--color-primary-dark);
+        }
+        .back-button {
+            display: inline-block;
+            background-color: var(--button-bg-color);
+            color: var(--color-white);
+            padding: 12px 25px;
+            border-radius: 8px;
+            text-decoration: none;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 1rem;
+            margin-top: 40px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            box-shadow: var(--shadow-subtle);
+        }
+        .back-button:hover {
+            background-color: var(--color-primary-dark);
+            transform: translateY(-3px);
+        }
+
+        @media (max-width: 768px) {
+            .policy-container {
+                margin: 40px auto;
+                padding: 30px;
+            }
+            .policy-container h1 {
+                font-size: 2.2rem;
+            }
+            .policy-container h2 {
+                font-size: 1.5rem;
+            }
+            .policy-container p, .policy-container ul {
+                font-size: 1rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <nav class="main-nav">
+        <a href="index.html" class="nav-brand">En tryggare väg</a>
+        <div class="nav-links">
+            <a href="index.html#services-section">Tjänster</a>
+            <a href="index.html#education-section">Utbildning</a>
+            <a href="index.html#about-section">Om mig</a>
+            <a href="index.html#contact-section">Kontakt</a>
+        </div>
+        <!-- Språk-växling och Hamburger-knapp är inte nödvändiga på denna statiska sida, men kan läggas till om dynamik önskas -->
+    </nav>
+
+    <div class="policy-container">
+        <h1>Integritetspolicy</h1>
+        <p>Senast uppdaterad: 3 juni 2025</p>
+
+        <p>Denna integritetspolicy beskriver hur "En tryggare väg" (hädanefter "vi", "oss" eller "vår") samlar in, använder och skyddar dina personuppgifter när du besöker vår webbplats och använder våra tjänster. Vi värnar om din integritet och strävar alltid efter att behandla dina personuppgifter med största respekt och i enlighet med gällande dataskyddslagstiftning, inklusive GDPR (General Data Protection Regulation).</p>
+
+        <h2>Vilka personuppgifter samlar vi in?</h2>
+        <p>Vi kan samla in följande typer av personuppgifter:</p>
+        <ul>
+            <li>**Kontaktuppgifter:** Namn, e-postadress, telefonnummer, när du kontaktar oss via vårt kontaktformulär eller direkt via e-post.</li>
+            <li>**Kommunikationsdata:** Innehållet i din kommunikation med oss, t.ex. meddelanden skickade via kontaktformulär.</li>
+            <li>**Teknisk data:** Information om din enhet och ditt besök på vår webbplats, såsom IP-adress, webbläsartyp, operativsystem, referens-URL:er, tid och datum för besöket, och sidor du besöker. Detta samlas in via cookies och liknande tekniker.</li>
+        </ul>
+
+        <h2>Hur använder vi dina personuppgifter?</h2>
+        <p>Vi använder dina personuppgifter för följande ändamål:</p>
+        <ul>
+            <li>För att svara på dina förfrågningar och meddelanden skickade via kontaktformuläret.</li>
+            <li>För att tillhandahålla och administrera våra tjänster till dig.</li>
+            <li>För att förbättra och optimera vår webbplats och våra tjänster baserat på hur de används (t.ex. via anonymiserad statistik).</li>
+            <li>För att uppfylla lagliga skyldigheter, t.ex. bokföringskrav.</li>
+        </ul>
+
+        <h2>Hur skyddar vi dina personuppgifter?</h2>
+        <p>Vi vidtar lämpliga tekniska och organisatoriska säkerhetsåtgärder för att skydda dina personuppgifter mot obehörig åtkomst, ändring, spridning eller förstöring. Detta inkluderar bland annat:</p>
+        <ul>
+            <li>Kryptering av data vid överföring (SSL/TLS).</li>
+            <li>Åtkomstkontroller för att säkerställa att endast behörig personal har tillgång till personuppgifter.</li>
+            <li>Regelbundna säkerhetskopior.</li>
+        </ul>
+
+        <h2>Delning av personuppgifter</h2>
+        <p>Vi delar inte dina personuppgifter med tredje part, förutom i följande fall:</p>
+        <ul>
+            <li>**Tjänsteleverantörer:** Vi kan anlita externa tjänsteleverantörer som utför tjänster för vår räkning, t.ex. webbhotell eller plattformar för kontaktformulär (som Formspree). Dessa parter får endast behandla personuppgifter enligt våra instruktioner och är bundna av sekretessavtal.</li>
+            <li>**Lagkrav:** Om vi är skyldiga att göra det enligt lag eller domstolsbeslut.</li>
+        </ul>
+
+        <h2>Dina rättigheter</h2>
+        <p>Enligt GDPR har du följande rättigheter gällande dina personuppgifter:</p>
+        <ul>
+            <li>**Rätt till tillgång:** Du har rätt att få information om vilka personuppgifter vi behandlar om dig.</li>
+            <li>**Rätt till rättelse:** Du har rätt att få felaktiga personuppgifter rättade.</li>
+            <li>**Rätt till radering ("rätten att bli bortglömd"):** Du har rätt att begära att dina personuppgifter raderas under vissa omständigheter.</li>
+            <li>**Rätt till begränsning av behandling:** Du har rätt att begära att vår behandling av dina personuppgifter begränsas under vissa omständigheter.</li>
+            <li>**Rätt till dataportabilitet:** Du har rätt att få ut dina personuppgifter i ett strukturerat, allmänt använt och maskinläsbart format.</li>
+            <li>**Rätt att invända:** Du har rätt att invända mot vår behandling av dina personuppgifter under vissa omständigheter.</li>
+            <li>**Rätt att lämna in klagomål:** Om du anser att vi behandlar dina personuppgifter felaktigt, har du rätt att lämna in ett klagomål till Integritetsskyddsmyndigheten (IMY).</li>
+        </ul>
+
+        <h2>Cookies</h2>
+        <p>Vår webbplats använder cookies för att förbättra din användarupplevelse. En cookie är en liten textfil som lagras på din enhet. Vi använder cookies för att:</p>
+        <ul>
+            <li>Komma ihåg dina språkinställningar.</li>
+            <li>Samla in anonymiserad statistik om hur webbplatsen används för att förbättra den.</li>
+        </ul>
+        <p>Du kan när som helst ändra dina cookie-inställningar i din webbläsare eller neka cookies via vår cookie-banner.</p>
+
+        <h2>Ändringar i denna integritetspolicy</h2>
+        <p>Vi kan komma att uppdatera denna integritetspolicy från tid till annan. Alla ändringar kommer att publiceras på denna sida. Vi rekommenderar att du regelbundet granskar denna policy för att hålla dig informerad om hur vi skyddar din information.</p>
+
+        <h2>Kontaktinformation</h2>
+        <p>Om du har frågor om denna integritetspolicy eller vår behandling av dina personuppgifter, vänligen kontakta oss via:</p>
+        <p>E-post: [Din e-postadress här]</p>
+        <p>Telefon: [Ditt telefonnummer här]</p>
+
+        <a href="index.html" class="back-button">Tillbaka till startsidan</a>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 En tryggare väg. Alla rättigheter förbehållna.</p>
+        <p><a href="privacy-policy.html">Integritetspolicy</a></p>
+    </footer>
+</body>
+</html>
