--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="sv">
 <head>
@@ -70,10 +69,11 @@
             text-decoration: none;
             font-family: 'Poppins', sans-serif;
             font-weight: 600;
-            font-size: 1rem;
+            font-size: 1.1rem; /* Ökad fontstorlek för bättre synlighet */
             margin-top: 40px;
             transition: background-color 0.3s ease, transform 0.2s ease;
             box-shadow: var(--shadow-subtle);
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.3); /* Lade till textskugga för bättre kontrast */
         }
         .back-button:hover {
             background-color: var(--color-primary-dark);
@@ -162,7 +162,7 @@
         <h2>Cookies</h2>
         <p>Vår webbplats använder cookies för att förbättra din användarupplevelse. En cookie är en liten textfil som lagras på din enhet. Vi använder cookies för att:</p>
         <ul>
-            <li>Komma ihåg dina språkinställningar.</li>
+            <li>Komma ihämma dina språkinställningar.</li>
             <li>Samla in anonymiserad statistik om hur webbplatsen används för att förbättra den.</li>
         </ul>
         <p>Du kan när som helst ändra dina cookie-inställningar i din webbläsare eller neka cookies via vår cookie-banner.</p>
