--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -63,7 +63,7 @@
         .back-button {
             display: inline-block;
             background-color: var(--button-bg-color);
-            color: var(--color-white);
+            color: var(--color-white); /* Säkerställer att texten är vit */
             padding: 12px 25px;
             border-radius: 8px;
             text-decoration: none;
